--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,11 @@ services:
       context: ./users/database
       dockerfile: Dockerfile
     environment:
-      # MYSQL_ROOT_PASSWORD=password
-      # MYSQL_DATABASE=db
       MYSQL_DATABASE: users_prod
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: root
       MYSQL_PASSWORD: password
-      # DATABASE_HOST: users-db #change this to users-db
+      DATABASE_HOST: users-db #change this to users-db
     ports:
       - "3307:3306"
 
