--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@ version: 2.1
 orbs:
   node: circleci/node@3.0.0
 workflows:
-  node-tests:
+  test:
     jobs:
-      - node/test
+      - users/test-package-json:
+          app-dir: users/
+          paths: users/
+          version: "12.16"
