--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
 version: 2.1
-orbs:
-  node: circleci/node@3.0.0
-workflows:
-  test:
-    jobs:
-      - node/test-package-json:
-          app-dir: users/
-          paths: users/
-          version: "12.16"
+
+jobs:
+  users:
+    docker:
+      - image: circleci/node@3.0.0
+      working_directory: ~/users
+
