--- a/users/package.json
+++ b/users/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "test": "jest",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "docx": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
