--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,23 +10,23 @@ jobs:
     steps:
       - checkout
 
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
+      # - restore_cache:
+      #     keys:
+      #       - v1-dependencies-{{ checksum "package.json" }}
+      #       - v1-dependencies-
 
-      - run: npm install
-      - run:
-          name: Run tests
-          command: npm test
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+      # - run: npm install
+      # - run:
+      #     name: Run tests
+      #     command: npm test
+      # - save_cache:
+      #     paths:
+      #       - node_modules
+      #     key: v1-dependencies-{{ checksum "package.json" }}
 
-      - persist_to_workspace:
-          root: ~/something
-          paths: .
+      # - persist_to_workspace:
+      #     root: ~/something
+      #     paths: .
 
 workflows:
   version: 2
