--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 #Implement some circleci?
 defaults: &defaults
-  working_directory: ~/something
+  working_directory: ~/repo/users
   docker:
     - image: circleci/node:8.9.1
 jobs:
@@ -15,10 +15,10 @@ jobs:
       #       - v1-dependencies-{{ checksum "package.json" }}
       #       - v1-dependencies-
 
-      # - run: npm install
-      # - run:
-      #     name: Run tests
-      #     command: npm test
+      - run: npm install
+      - run:
+          name: Run tests
+          command: npm test
       # - save_cache:
       #     paths:
       #       - node_modules
