--- a/users/package.json
+++ b/users/package.json
@@ -1,7 +1,7 @@
 {
   "name": "users",
   "version": "1.0.0",
-  "description": "",
+  "description": "User description",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
