find user folder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 #Implement some circleci?
 defaults: &defaults
-  working_directory: ~/repo/users
+  working_directory: ~/users
   docker:
     - image: circleci/node:8.9.1
 jobs:
@@ -9,24 +9,10 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-
-      # - restore_cache:
-      #     keys:
-      #       - v1-dependencies-{{ checksum "package.json" }}
-      #       - v1-dependencies-
-
       - run: npm install
       - run:
           name: Run tests
           command: npm test
-      # - save_cache:
-      #     paths:
-      #       - node_modules
-      #     key: v1-dependencies-{{ checksum "package.json" }}
-
-      # - persist_to_workspace:
-      #     root: ~/something
-      #     paths: .
 
 workflows:
   version: 2
