--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/here-listen/users
+    working_directory: ~/here-listen/users/
     docker:
       - image: circleci/node:8
     steps:
