--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/here-listen/users/
+    working_directory: ~/here-listen
     docker:
       - image: circleci/node:8
     steps:
       - checkout
-      - run: npm install
-      - run: npm test
+      - run: pwd
+      - run: ls
