--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ jobs:
   build:
     working_directory: ~/here-listen/
     docker:
-      - image: circleci/node:8
+      - image: circleci/node:15.2.0
     steps:
       - checkout
       - run:
-          command: pwd
+          command: cd users && ls
       - run:
           command: cd users && npm install && npm test
