--- a/users/package.json
+++ b/users/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.772.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "docx": "^5.3.0",
