--- a/users/package.json
+++ b/users/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dateformat": "^4.0.0",
     "docx": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
