--- a/buildspec.yml
+++ b/buildspec.yml
@@ -35,7 +35,7 @@ phases:
   build:
     commands:
       - echo building images
-      - docker-compose up -d --build
+      - docker-compose -f docker-compose.codebuild.yml up -d --build
       - echo Testing,Linting, should go here...
       - echo building prod images...
       - echo building User image  Builder image  Client image ...
