development and production should not conflict

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -3,8 +3,8 @@ services:
   users:
     build:
       context: ./users
-      dockerfile: Dockerfile.prod
-    # command: ["/wait-for-it.sh", "users-db:3307", "--", "npm", "start"]
+      dockerfile: Dockerfile.dev
+    command: ["/wait-for-it.sh", "users-db:3307", "--", "npm", "start"]
     volumes:
       - "./users:/usr/src/app"
     ports:
@@ -32,8 +32,9 @@ services:
       DATABASE_HOST: users-db #change this to users-db
     ports:
       - "3307:3306"
-    # volumes:
-    #   - users-db:/var/lib/mysql
+    volumes:
+      #Stores all the database data in this volume
+      - users-db:/var/lib/mysql
 
   client:
     build:
