echo within buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -39,7 +39,7 @@ phases:
       - echo Testing,Linting, should go here...
       - echo building prod images...
       - echo building User image  Builder image  Client image ...
-      - Using users/Dockerfile  client/Dockerfile in your WORK DIRECTORY to build PRODUCTION
+      - echo Using users/Dockerfile  client/Dockerfile in your WORK DIRECTORY to build PRODUCTION
       - >
         docker build \
           --cache-from $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/here-listen-users:$DOCKER_TAG \
