--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
   users:
     build:
       context: ./users
-      dockerfile: Dockerfile.dev
-    command: ["/wait-for-it.sh", "users-db:3307", "--", "npm", "start"]
+      dockerfile: Dockerfile.prod
     volumes:
       - "./users:/usr/src/app"
     ports:
@@ -32,14 +31,13 @@ services:
       DATABASE_HOST: users-db #change this to users-db
     ports:
       - "3307:3306"
-    volumes:
-      #Stores all the database data in this volume
-      - users-db:/var/lib/mysql
+    # volumes:
+    #   - users-db:/var/lib/mysql
 
   client:
     build:
       context: ./client
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.prod
     volumes:
       - "./client:/usr/src/app"
       - "/usr/src/app/node_modules"
