docker-compose.yml is needed to build the other images unfortunatly

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,10 +1,10 @@
 version: "3.7"
-# This yml found works with production
 services:
   users:
     build:
       context: ./users
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile.dev
+    command: ["/wait-for-it.sh", "users-db:3307", "--", "npm", "start"]
     volumes:
       - "./users:/usr/src/app"
     ports:
@@ -38,7 +38,7 @@ services:
   client:
     build:
       context: ./client
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile.dev
     volumes:
       - "./client:/usr/src/app"
       - "/usr/src/app/node_modules"
