--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[![<easyrun32>](https://circleci.com/gh/easyrun32/here-listen.svg?style=svg)](https://app.circleci.com/pipelines/github/easyrun32/here-listen?branch=main)",
   "main": "index.js",
   "scripts": {
+    "starting": "echo \"\\x1b[91mHello thank you for contributing\n\nYou can contribute by literally just testing the app\n\nIt helps A lot\n\nAgain, thank you for contributing!\n\n\\x1b[0m\"&& cd client && npm i && cd .. && cd users && npm i",
     "start": "echo \"\\x1b[91mDon't forget to do npm stop.\n\nYour code will not update.\n\nIf you edited the code!\n\nThank you for contributing!\n\n\\x1b[0m\" && cd development && docker-compose -f docker-compose.development.yml up",
     "build": "echo \"\\x1b[91mBuilding and running the environment!\n\n\\x1b[0m\" && cd development && docker-compose -f docker-compose.development.yml up --build",
     "stop": "cd development && docker-compose -f docker-compose.development.yml down",
