package.json message && docker-compose volume fix development

--- a/development/docker-compose.development.yml
+++ b/development/docker-compose.development.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile.dev
     command: ["/wait-for-it.sh", "users-db:3307", "--", "npm", "start"]
     volumes:
-      - "./users:/usr/src/app"
+      - "../users:/usr/src/app"
     ports:
       - 5001:5000
     environment:
@@ -32,15 +32,15 @@ services:
       DATABASE_HOST: users-db #change this to users-db
     ports:
       - "3307:3306"
-    # volumes:
-    #   - users-db:/var/lib/mysql
+    volumes:
+      - users-db:/var/lib/mysql
 
   client:
     build:
       context: ../client
       dockerfile: Dockerfile.prod
     volumes:
-      - "./client:/usr/src/app"
+      - "../client:/usr/src/app"
       - "/usr/src/app/node_modules"
     ports:
       - 3007:3000
