--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ env:
   variables:
     AWS_REGION: "us-east-1"
     REACT_APP_USERS_SERVICE_URL: ${ALB_DNS}
+    SECRET: ${SECRET}
+    SECRET2: $SECRET2
 
 phases:
   install:
