testing client environment

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,10 @@
 version: 0.2
-
+# WARNING IF CODEBUILD GIVES YOU ERROR THAT SAYS PULL RATE LIMIT
+# ITS SOMETHING WRONG WITH THIS FILE
 env:
   variables:
     AWS_REGION: "us-east-1"
     REACT_APP_USERS_SERVICE_URL: ${ALB_DNS}
-    SECRET: ${SECRET}
 
 phases:
   install:
