dockerfile in client

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -20,6 +20,11 @@ RUN npm install react-scripts@3.3.0 -g --silent
 # set environment variables
 ARG REACT_APP_USERS_SERVICE_URL
 ENV REACT_APP_USERS_SERVICE_URL $REACT_APP_USERS_SERVICE_URL
+
+ARG REACT_APP_SECRETME
+ENV REACT_APP_SECRETME $REACT_APP_SECRETME
+
+
 ARG NODE_ENV
 ENV NODE_ENV $NODE_ENV
 
