--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -42,6 +42,8 @@ services:
         - NODE_ENV=production
         - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
         - REACT_APP_SECRETME=${REACT_APP_SECRETME}
+    environment:
+      - REACT_APP_SECRETME=${REACT_APP_SECRETME}
     ports:
       - 3007:80
     depends_on:
