--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,9 +15,12 @@ phases:
       #new
       - echo variable is here?
       - echo ${REACT_APP_SECRETME}
-      - printenv
+      - echo Does it exist?
+      - env | grep REACT_APP_SECRETME
+      - echo before export
       - export REACT_APP_SECRETME=$REACT_APP_SECRETME
-      - env
+      - echo after export
+      - env | grep REACT_APP_SECRETME
       #new
       - echo logging in to ecr...
       - $(aws ecr get-login --no-include-email --region $AWS_REGION)
@@ -34,10 +37,6 @@ phases:
       - docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/here-listen-client:$DOCKER_TAG || true
   build:
     commands:
-      #new
-      - export REACT_APP_SECRETME=${REACT_APP_SECRETME}
-      - env
-      #new
       - echo building images
       - docker-compose up -d --build
       - echo Testing,Linting, should go here...
