--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ env:
   variables:
     AWS_REGION: "us-east-1"
     REACT_APP_USERS_SERVICE_URL: ${ALB_DNS}
+    REACT_APP_SECRETME: ${REACT_APP_SECRETME}
 
 phases:
   install:
@@ -12,6 +13,7 @@ phases:
       docker: 18
   pre_build:
     commands:
+      - export REACT_APP_CUP=OH_HELLO_THERE
       - export REACT_APP_SECRETME=$REACT_APP_SECRETME
       - echo logging in to ecr...
       - $(aws ecr get-login --no-include-email --region $AWS_REGION)
