--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,8 @@ phases:
       docker: 18
   pre_build:
     commands:
+      - export REACT_APP_SECRETME=$REACT_APP_SECRETME
+      - env
       - echo logging in to ecr...
       - $(aws ecr get-login --no-include-email --region $AWS_REGION)
       - |
