--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
           DOCKER_TAG=${CODEBUILD_RESOLVED_SOURCE_VERSION}
         fi
       - echo "Docker tag:" $DOCKER_TAG
-      - aws aws s3 cp s3://docker-token/.docker.key .docker.key
+      - aws s3 cp s3://docker-token/.docker.key .docker.key
       - docker login -u reactnode32 --password-stdin < .docker.key
       - docker pull reactnode32/here-listen-users:$DOCKER_TAG || true
       - docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/here-listen-client:builder || true
