--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
       - aws s3 cp s3://docker-token/.docker.key .docker.key
       - docker login -u reactnode32 --password-stdin < .docker.key
       - docker pull reactnode32/here-listen-users:$DOCKER_TAG || true
-      - docker pull $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/here-listen-client:builder || true
+      - docker pull reactnode32/here-listen-client:builder || true
       - docker pull reactnode32/here-listen-client:$DOCKER_TAG || true
   build:
     commands:
