--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "echo \"\\x1b[91mDon't forget to do npm stop.\n\nYour code will not update.\n\nIf you edited the code!\n\nThank you for contributing!\n\n\\x1b[0m\" && cd development && docker-compose -f docker-compose.development.yml up",
     "build": "echo \"\\x1b[91mBuilding and running the environment!\n\nDon't forget to do npm stop.\n\nYour code will not update.\n\nIf you edited the code!\n\n\\x1b[0m\" && cd development && docker-compose -f docker-compose.development.yml up --build",
     "stop": "cd development && docker-compose -f docker-compose.development.yml down",
-    "clean": "echo \"\\x1b[91mTHIS SCRIPT DELETES EVERYTHING STORED IN THE DEVELOPMENT DATABASE\n\n\n\n\\x1b[0m\" && docker system prune && echo \"\\x1b[91mDELETING ALL DANGLING VOLUMES\n\n\n\n\\x1b[0m\" && docker volume rm $(docker volume ls -qf dangling=true)"
+    "clean": "echo \"\\x1b[91mTHIS SCRIPT DELETES EVERYTHING STORED IN THE DEVELOPMENT DATABASE\n\n\n\n\\x1b[0m\" && docker system prune && echo \"\\x1b[91mDELETING ALL DANGLING VOLUMES\n\n\n\n\\x1b[0m\" && docker volume rm $(docker volume ls -qf dangling=true)",
+    "start-prod-build": "docker-compose -f docker-compose.prod.yml up --build",
+    "start-prod": "docker-compose -f docker-compose.prod.yml up ",
+    "stop-prod": "docker-compose -f docker-compose.prod.yml down"
   },
   "repository": {
     "type": "git",
