--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -40,12 +40,11 @@ services:
       context: ./client
       dockerfile: Dockerfile
       args:
-        - TEST=hey
         - NODE_ENV=production
         - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
-        - REACT_APP_SECRETME=${REACT_APP_SECRETME}
+        - REACT_APP_SECRETME=helloprod
     environment:
-      - REACT_APP_SECRETME=${REACT_APP_SECRETME}
+      - REACT_APP_SECRETME=helloagainprod
     ports:
       - 3007:80
     depends_on:
