--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     environment:
       - NODE_ENV=development
       - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
-      - REACT_APP_SECRETME=${REACT_APP_SECRETME}
+      - REACT_APP_SECRETME=hellodev
     depends_on:
       - users
 volumes:
