--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -20,8 +20,10 @@ RUN npm install react-scripts@3.3.0 -g --silent
 # set environment variables
 ARG REACT_APP_USERS_SERVICE_URL
 ENV REACT_APP_USERS_SERVICE_URL $REACT_APP_USERS_SERVICE_URL
+RUN echo 'SHOWING ALL ENV'
+RUN env
+ARG REACT_APP_SECRETME=$REACT_APP_SECRETME
 
-ARG REACT_APP_SECRETME=default
 ENV REACT_APP_SECRETME $REACT_APP_SECRETME
 
 ARG NODE_ENV
