--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -26,6 +26,10 @@ ARG REACT_APP_SECRETME=$REACT_APP_SECRETME
 
 ENV REACT_APP_SECRETME $REACT_APP_SECRETME
 
+
+RUN echo 'SHOWING ALL AFTER REACT_APP_SECRETME'
+RUN env
+
 ARG NODE_ENV
 ENV NODE_ENV $NODE_ENV
 
