the issue could be last line in build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -58,6 +58,7 @@ phases:
           --cache-from reactnode32/here-listen-client:$DOCKER_TAG \
           -f client/Dockerfile \
           -t reactnode32/here-listen-client:$DOCKER_TAG \
+          --build-arg REACT_APP_SECRETME=$REACT_APP_SECRETME \
           ./client
   post_build:
     commands:
